<resources>
    <string name="app_name">MovieApplication</string>
    <string name="title_activity_main">Feed</string>
    <string name="most_popular_movies_title" translatable="true">Most Popular Movies</string>
    <string name="top_rated_movies_title" translatable="true">Top Rated Movies</string>
    <string name="upcoming_movies_title" translatable="true">Upcoming Movies</string>
    <string name="top_rated_tvshows_title" translatable="true">Top Rated TV Shows</string>
    <string name="most_popular_tvshows_title" translatable="true">Most popular TV Shows</string>
    <string name="title_activity_movie"></string>
    <string name="title_activity_actor"></string>
    <string name="user_rating_value" translatable="true">Not Rated</string>
    <string name="movie_cast" translatable="true">Cast</string>
    <string name="reviews_title" translatable="true">Reviews</string>
    <string name="actor_movie_list_title" translatable="true">Known For</string>
    <string name="actor_tv_shows_list_title" translatable="true">TV Shows</string>
    <string name="search_title" translatable="true">Search</string>

    <string name="favourite_remove_button" translatable="true">Remove</string>
    <string name="trailer_title" translatable="true">See Trailer</string>

    <!-- Drawer menu items title -->
    <string-array name="drawer_menu_titles">
        <item>Home</item>
        <item>Favourites</item>
        <item>My Ratings</item>
    </string-array>

    <!-- Drawer menu item icons -->
    <array name="drawer_menu_icons">
        <item>@drawable/ic_drawer_home</item>
        <item>@drawable/ic_drawer_heart</item>
        <item>@drawable/ic_drawer_star</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_favourite_movies">Favourite Movies</string>
    <string name="title_activity_trailer">TrailerActivity</string>

</resources>
