<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/colorPrimary" />

        <ListView
            android:id="@+id/search_results_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:background="@color/colorPrimaryLight" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/most_popular_movies_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/most_popular_movies_title"
                    android:textStyle="bold" />

                <mobi.parchment.widget.adapterview.listview.ListView xmlns:parchment="http://schemas.android.com/apk/res/com.atlantbh.boristomic.movieapplication"
                    android:id="@+id/most_popular_movies_list"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/list_height_size"
                    android:layout_below="@id/most_popular_movies_title"
                    android:clipToPadding="false"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="horizontal"
                    parchment:cellSpacing="5sp"
                    parchment:orientation="horizontal"
                    parchment:snapPosition="onScreen"
                    parchment:snapToPosition="true" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/most_popular_movies_list"
                    android:layout_marginStart="@dimen/line_start"
                    android:background="#000000" />


                <TextView
                    android:id="@+id/top_rated_movies_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line1"
                    android:padding="10dp"
                    android:text="@string/top_rated_movies_title"
                    android:textStyle="bold" />

                <mobi.parchment.widget.adapterview.listview.ListView xmlns:parchment="http://schemas.android.com/apk/res/com.atlantbh.boristomic.movieapplication"
                    android:id="@+id/top_rated_movies_list"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/list_height_size"
                    android:layout_below="@id/top_rated_movies_title"
                    android:clipToPadding="false"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="horizontal"
                    parchment:cellSpacing="5dp"
                    parchment:orientation="horizontal"
                    parchment:snapPosition="onScreen"
                    parchment:snapToPosition="true" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/top_rated_movies_list"
                    android:layout_marginStart="@dimen/line_start"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/upcoming_movies_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line2"
                    android:padding="10dp"
                    android:text="@string/upcoming_movies_title"
                    android:textStyle="bold" />


                <mobi.parchment.widget.adapterview.listview.ListView xmlns:parchment="http://schemas.android.com/apk/res/com.atlantbh.boristomic.movieapplication"
                    android:id="@+id/upcoming_movies_list"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/list_height_size"
                    android:layout_below="@id/upcoming_movies_title"
                    android:clipToPadding="false"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="horizontal"
                    parchment:cellSpacing="5dp"
                    parchment:orientation="horizontal"
                    parchment:snapPosition="onScreen"
                    parchment:snapToPosition="true" />

                <View
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/upcoming_movies_list"
                    android:layout_marginStart="@dimen/line_start"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/top_rated_tvshows_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line3"
                    android:padding="10dp"
                    android:text="@string/top_rated_tvshows_title"
                    android:textStyle="bold" />

                <mobi.parchment.widget.adapterview.listview.ListView xmlns:parchment="http://schemas.android.com/apk/res/com.atlantbh.boristomic.movieapplication"
                    android:id="@+id/top_rated_tvshows_list"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/list_height_size"
                    android:layout_below="@id/top_rated_tvshows_title"
                    android:clipToPadding="false"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="horizontal"
                    parchment:cellSpacing="5dp"
                    parchment:orientation="horizontal"
                    parchment:snapPosition="onScreen"
                    parchment:snapToPosition="true" />

                <View
                    android:id="@+id/line4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/top_rated_tvshows_list"
                    android:layout_marginStart="@dimen/line_start"
                    android:background="#000000" />


                <TextView
                    android:id="@+id/most_popular_tvshows_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line4"
                    android:padding="10dp"
                    android:text="@string/most_popular_tvshows_title"
                    android:textStyle="bold" />


                <mobi.parchment.widget.adapterview.listview.ListView xmlns:parchment="http://schemas.android.com/apk/res/com.atlantbh.boristomic.movieapplication"
                    android:id="@+id/most_popular_tvshows_list"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/list_height_size"
                    android:layout_below="@id/most_popular_tvshows_title"
                    android:clipToPadding="false"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="horizontal"
                    parchment:cellSpacing="5dp"
                    parchment:orientation="horizontal"
                    parchment:snapPosition="onScreen"
                    parchment:snapToPosition="true" />


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>